--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Noto+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic:wght@400;700&family=Enriqueta&display=swap');
 
 :root {
     --clr-primary-300: hsl(212, 47%, 50%);
@@ -8,14 +8,16 @@
     --clr-accent-400: hsl(16, 72%, 51%);
 
     --clr-neutral-100: hsl(0, 0%, 100%);
+    --clr-neutral-200: hsl(0, 0%, 80%);
     --clr-neutral-900: hsl(0, 0%, 0%);
 
-    --ff-primary: 'Noto Sans', sans-serif;
-    --ff-secondary: 'Noto Serif', serif;
+    --ff-primary: 'BIZ UDPGothic', sans-serif;
+    --ff-secondary: 'Enriqueta', serif;
 
     --fw-regular: 400;
     --fw-bold: 700;
 
+    --fs-100: 0.95rem;
     --fs-200: 1rem;
     --fs-250: 1.125rem;
     --fs-300: 1.25rem;
@@ -36,9 +38,20 @@
     --fs-project-title: var(--fs-600);
     --fs-cta-title: var(--fs-650);
     --fs-btn: var(--fs-200);
+
+    --size-100: 1.5rem;
+    --size-150: 2rem;
+    --size-200: 2.5rem;
+    --size-300: 4.7rem;
+    --size-400: 6.25rem;
+    --size-500: 7.8rem;
+    --size-600: 8.75rem;
+    --size-700: 9.7rem;
+    --size-800: 10.3rem;
+    --size-900: 11rem;
 }
 
-@media (min-width: 60em) {
+@media (min-width: 45em) {
     :root {
         --fs-nav-links: var(--fs-350);
         --fs-banner-title: var(--fs-950);
@@ -101,7 +114,30 @@ picture {
   }
 }
 
+
+/* General styling */
+
+body {
+    font-family: var(--ff-secondary);
+    font-size: var(--fs-body);
+    color: var(--clr-neutral-900);
+}
+
+#root {
+    max-width: 120rem;
+    margin-inline: auto;
+}
+
+.container {
+    --max-width: 120rem;
+    --inline-gap: var(--size-150);
+
+    width: min(var(--max-width), 100% - (var(--inline-gap) * 2));
+    margin-inline: auto;
+}
+
 /* Utility Classes */
+
 .text-primary-400 {
     color: var(--clr-primary-400);
 }
@@ -159,4 +195,44 @@ picture {
 }
 .bg-accent-400 {
     background-color: var(--clr-accent-400);
+}
+
+.padding-block-100 {
+    padding-block: var(--size-100);
+}
+.padding-block-300 {
+    padding-block: var(--size-300);
+}
+.padding-block-400 {
+    padding-block: var(--size-400);
+}
+.padding-top-500 {
+    padding-bottom: var(--size-500);
+}
+.padding-top-600 {
+    padding-top: var(--size-600);
+}
+.padding-top-800 {
+    padding-bottom: var(--size-800);
+}
+.padding-top-900 {
+    padding-bottom: var(--size-900);
+}
+.padding-bottom-200 {
+    padding-bottom: var(--size-200);
+}
+.padding-bottom-700 {
+    padding-bottom: var(--size-700);
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
