Resize navbar responsiveness
Modify paddings, logo and menu icons sizes.

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@
     --fs-cta-title: var(--fs-650);
     --fs-btn: var(--fs-200);
 
+    --size-50: 0.75rem;
     --size-100: 1.5rem;
     --size-150: 2rem;
     --size-200: 2.5rem;
