--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
     text-transform: uppercase;
     color: var(--clr-neutral-100);
     background-color: var(--clr-primary-400);
-    padding-block: var(--size-100);
+    padding-block: var(--size-50);
 }
 
 .nav-container {
@@ -23,7 +23,43 @@
     display: none;
 }
 
-@media (max-width: 45em) {
+.nav-icon {
+    display: none;
+    color: inherit;
+    width: 2em;
+}
+
+.nav-links {
+    display: flex;
+    gap: var(--size-100);
+}
+
+.nav-links li {
+    color: inherit;
+    cursor: pointer;
+}
+
+.nav-links li:hover, .nav-links a:focus-visible {
+    outline: 0;
+    color: var(--clr-neutral-200);
+}
+
+.nav-links a {
+    font-size: 1em;
+    text-decoration: none;
+    color: inherit;
+}
+
+@media (max-width: 63em) {
+    .navbar {
+        padding-block: 0;
+    }
+
+    .brand img{
+        width: 4.3em;
+        aspect-ratio: 1;
+    }
+
     .navbar[data-expanded] {
         height: 100vh;
     }
@@ -71,30 +107,4 @@
         align-items: center;
         gap: 0;
     }
-}
-
-.nav-icon {
-    display: none;
-    color: inherit;
-    width: 2.5em;
-}
-
-.nav-links {
-    display: flex;
-    gap: var(--size-100);
-}
-
-.nav-links li {
-    color: inherit;
-    cursor: pointer;
-}
-
-.nav-links li:hover, .nav-links a:focus-visible {
-    color: var(--clr-neutral-200);
-}
-
-.nav-links a {
-    font-size: 1em;
-    text-decoration: none;
-    color: inherit;
 }
