--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@
 
     --size-50: 0.75rem;
     --size-100: 1.5rem;
+    --size-125: 1.75rem;
     --size-150: 2rem;
     --size-200: 2.5rem;
     --size-300: 4.7rem;
