--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,9 @@
     color: var(--clr-neutral-100);
     background-color: var(--clr-primary-400);
     padding-block: var(--size-50);
+    position: fixed;
+    inset: 0 0 auto 0;
+    z-index: 100;
 }
 
 .nav-container {
@@ -59,10 +62,6 @@
         aspect-ratio: 1;
     }
 
-    .navbar[data-expanded] {
-        height: 100vh;
-    }
-
     .nav-container {
         background-color: inherit;
     }
@@ -78,6 +77,7 @@
     ul.nav-links {
         display: none;
         background-color: inherit;
+        height: 100vh;
     }
 
     ul.nav-links li {
@@ -91,7 +91,6 @@
 
     ul.nav-links li:first-child {
         border-top: 1px solid var(--clr-neutral-200);
-        margin-top: var(--size-100);
     }
 
     
