--- a/src/components/HomeBanner/HomeBanner.css
+++ b/src/components/HomeBanner/HomeBanner.css
@@ -2,7 +2,7 @@
     display: grid;
     place-items: center;
     width: 100%;
-    height: 90vh;
+    min-height: max(90vh, 40rem);
     color: var(--clr-neutral-100);
     background-color: var(--clr-bg-opacity-800);
     position: relative;
