--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,38 +11,38 @@
     z-index: 100;
 }
 
-.nav-container {
+.navbar__container {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
 }
 
-.brand img{
+.navbar__brand img{
     display: none;
     width: 5.7rem;
 }
 
-.mobile-menu-toggle {
+.navbar__mobile-menu-toggle {
     display: none;
 }
 
-.nav-links {
+.navbar__links {
     display: flex;
     gap: var(--size-150);
 }
 
-.nav-links li {
+.navbar__links li {
     color: inherit;
     cursor: pointer;
 }
 
-.nav-links li:hover, .nav-links a:focus-visible {
+.navbar__links li:hover, .navbar__links a:focus-visible {
     outline: 0;
     color: var(--clr-accent-100);
 }
 
-.nav-links a {
+.navbar__links a {
     font-size: 1em;
 }
 
@@ -53,18 +53,18 @@
         padding-block: 0;
     }
 
-    .brand img{
+    .navbar__brand img{
         display: block;
         width: 4.125rem;
         padding-block: var(--size-75);
     }
 
-    .nav-container {
+    .navbar__container {
         height: auto;
         background-color: inherit;
     }
     
-    .mobile-menu-toggle {
+    .navbar__mobile-menu-toggle {
         display: block;
         color: inherit;
         background-color: transparent;
@@ -72,19 +72,19 @@
         margin-left: auto;
     }
 
-    .nav-icon {
+    .navbar__icon {
         display: none;
         color: inherit;
         width: 2rem;
     }
 
-    ul.nav-links {
+    ul.navbar__links {
         display: none;
         background-color: inherit;
         height: 100vh;
     }
 
-    ul.nav-links li {
+    ul.navbar__links li {
         width: 100vw;
         line-height: 1;
         display: grid;
@@ -93,15 +93,15 @@
         border-bottom: 1px solid var(--clr-accent-100);
     }
 
-    ul.nav-links li:first-child {
+    ul.navbar__links li:first-child {
         border-top: 1px solid var(--clr-accent-100);
     }
 
-    .nav-icon[data-visible] {
+    .navbar__icon[data-visible] {
         display: block;
     }
 
-    .nav-links[data-expanded] {
+    .navbar__links[data-expanded] {
         width: 100%;
         display: flex;
         flex-direction: column;
