--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Sura:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sura:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Enriqueta&display=swap');
 
 :root {
@@ -6,7 +6,7 @@
     --clr-primary-400: hsl(212, 47%, 38%);
 
     --clr-accent-100: hsl(0, 0%, 80%);
-    --clr-accent-400: hsl(21, 99%, 50%);
+    --clr-accent-400: hsl(212, 30%, 50%);
 
     --clr-neutral-100: hsl(0, 0%, 100%);
     --clr-neutral-900: hsl(0, 0%, 0%);
@@ -16,29 +16,32 @@
     --ff-primary: 'Sura', serif;
     --ff-secondary: 'Enriqueta', serif;
 
-    --fw-regular: 400;
+    --fw-light: 400;
+    --fw-regular: 600;
     --fw-bold: 700;
-    --fw-black: 900;
 
+    --fs-50: 0.8rem;
     --fs-100: 0.95rem;
     --fs-200: 1rem;
-    --fs-250: 1.125rem;
+    --fs-250: 1.15rem;
     --fs-300: 1.25rem;
     --fs-350: 1.375rem;
     --fs-400: 1.625rem;
     --fs-500: 2rem;
-    --fs-600: 2.6rem;
+    --fs-600: 3rem;
     --fs-650: 3.125rem;
-    --fs-700: 3.75rem;
+    --fs-700: 4rem;
     --fs-800: 5rem;
 
     --fs-body: var(--fs-250);
     --fs-nav-links: var(--fs-400);
     --fs-banner-title: var(--fs-650);
-    --fs-section-title: var(--fs-800);
+    --fs-title-phrase: var(--fs-350);
+    --fs-section-title: var(--fs-600);
+    --fs-picture-info: var(--fs-100);
     --fs-project-title: var(--fs-600);
     --fs-cta-title: var(--fs-650);
-    --fs-btn: var(--fs-200);
+    --fs-btn: var(--fs-100);
 
     --size-25: 0.75rem;
     --size-50: 1rem;
@@ -48,7 +51,8 @@
     --size-150: 2rem;
     --size-200: 2.5rem;
     --size-250: 2.75rem;
-    --size-300: 4.7rem;
+    --size-300: 3rem;
+    --size-325: 3.5rem;
     --size-400: 6.25rem;
     --size-500: 7.8rem;
     --size-600: 8.75rem;
@@ -62,9 +66,11 @@
     :root {
         --fs-nav-links: var(--fs-350);
         --fs-banner-title: var(--fs-800);
-        --fs-section-title: var(--fs-900);
+        --fs-title-phrase: var(--fs-350);
+        --fs-section-title: var(--fs-700);
+        --fs-project-title: var(--fs-600);
         --fs-cta-title: var(--fs-700);
-        --fs-btn: var(--fs-250);
+        --fs-btn: var(--fs-200);
     }
 }
 
@@ -131,6 +137,12 @@ body {
     color: var(--clr-neutral-900);
 }
 
+button {
+    border: 0;
+    border-radius: 0;
+    cursor: pointer;
+}
+
 #root {
     max-width: 120rem;
     margin-inline: auto;
@@ -142,6 +154,46 @@ body {
 
     width: min(var(--max-width), 100% - (var(--inline-gap) * 2));
     margin-inline: auto;
+}
+
+.btn {
+    font-size: var(--fs-btn);
+    font-weight: var(--fw-regular);
+    text-transform: uppercase;
+    position: relative;
+    isolation: isolate;
+    overflow: hidden;
+}
+
+.btn::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: -100%;
+    right: 100%;
+    transition-property: left, right;
+    transition-duration: 300ms;
+    transition-timing-function: ease-out;
+}
+
+.btn[data-bg='primary'] {
+    color: var(--clr-neutral-100);
+    background-color: var(--clr-primary-400);
+}
+
+.btn[data-bg='primary']:hover {
+    color: var(--clr-primary-400);
+}
+
+.btn[data-bg='primary']::after {
+    background-color: var(--clr-accent-100);
+}
+
+.btn[data-bg='primary']:hover::after {
+    inset: 0;
 }
 
 /* Utility Classes */
@@ -165,6 +217,12 @@ body {
     color: var(--clr-neutral-900);
 }
 
+.highlighted {
+    font-family: var(--ff-primary);
+    font-weight: var(--fw-bold);
+    text-transform: uppercase;
+}
+
 .ff-primary {
     font-family: var(--ff-primary);
 }
@@ -172,18 +230,27 @@ body {
     font-family: var(--ff-secondary);
 }
 
+.fw-light {
+    font-weight: var(--fw-light);
+}
 .fw-regular {
-    font-weight: 400;
+    font-weight: var(--fw-regular);
 }
 .fw-bold {
-    font-weight: 700;
+    font-weight: var(--fw-bold);
 }
 
 .fs-banner-title {
     font-size: var(--fs-banner-title);
 }
+.fs-title-phrase {
+    font-size: var(--fs-title-phrase);
+}
 .fs-section-title {
     font-size: var(--fs-section-title);
+}
+.fs-picture-info {
+    font-size: var(--fs-50);
 }
 .fs-project-title {
     font-size: var(--fs-project-title);
@@ -191,11 +258,8 @@ body {
 .fs-cta-title {
     font-size: var(--fs-cta-title);
 }
-.fs-secondary-title {
-    font-size: var(--fs-600);
-}
-.fs-300 {
-    font-size: var(--fs-300);
+.fs-body {
+    font-size: var(--fs-body);
 }
 
 .bg-primary-400 {
