--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -30,12 +30,14 @@
 @media (min-width: 63em) {
     .about-us {
         grid-template-columns: auto max(36.5vw, 30rem);
+        grid-template-rows: repeat(2, min-content);
     }
 
     .about-us__text {
         display: flex;
         flex-direction: column;
         max-width: 50ch;
+        grid-row: span 2;
     }
 
     .about-us__text button {
@@ -43,11 +45,9 @@
         align-self: flex-start;
     }
 
-    .about-us__media {
+    .about-us__main-picture {
         width: 100%;
         height: 100%;
-        display: grid;
-        grid-template-rows: repeat(2, 1fr);
     }
 
     .about-us__main-picture, .about-us__main-picture p:first-child {
@@ -77,5 +77,10 @@
         position: absolute;
         left: 0;
         bottom: var(--size-75);
+    }
+
+    .about-us__carousel {
+        width: 100%;
+        height: 100%;
     }
 }
