--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@
     --fs-350: 1.375rem;
     --fs-400: 1.625rem;
     --fs-500: 2rem;
+    --fs-550: 2.45rem;
     --fs-600: 3rem;
     --fs-650: 3.125rem;
     --fs-700: 4rem;
@@ -35,7 +36,7 @@
 
     --fs-body: var(--fs-250);
     --fs-nav-links: var(--fs-400);
-    --fs-banner-title: var(--fs-650);
+    --fs-banner-title: clamp(var(--fs-550), 10vw , var(--fs-800));
     --fs-title-phrase: var(--fs-350);
     --fs-section-title: var(--fs-600);
     --fs-picture-info: var(--fs-100);
@@ -65,7 +66,6 @@
 @media (min-width: 63em) {
     :root {
         --fs-nav-links: var(--fs-350);
-        --fs-banner-title: var(--fs-800);
         --fs-title-phrase: var(--fs-350);
         --fs-section-title: var(--fs-700);
         --fs-project-title: var(--fs-600);
