--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -23,11 +23,11 @@
     padding-block: var(--size-50);
 }
 
-.about-us__media {
+.about-us__main-picture, .about-us__statistics {
     display: none;
 }
 
-@media (min-width: 63em) {
+@media (min-width: 69em) {
     .about-us {
         grid-template-columns: auto max(36.5vw, 30rem);
         grid-template-rows: repeat(2, 1fr);
@@ -46,6 +46,7 @@
     }
 
     .about-us__main-picture {
+        display: block;
         width: 100%;
         height: 100%;
     }
@@ -81,9 +82,57 @@
 
     .about-us__statistics {
         display: grid;
-        align-items: end;
-        grid-template-columns: 70% auto;
+        grid-template-columns: 7% 7% 7% 50% auto;
+        grid-template-rows: 25% 35% 20% 20%;
+        grid-template-areas: 
+            ". . . . ."
+            ". indicator . percentaje percentaje"
+            ". . . description ."
+            ". . . . ."
+        ;
         width: 100%;
         height: 100%;
+    }
+
+    .about-us__statistics-indicator {
+        position: relative;
+        grid-area: indicator;
+        width: 100%;
+        height: 100%;
+    }
+
+    .about-us__statistics-indicator::before {
+        position: absolute;
+        content: '';
+        height: 2px;
+        width: var(--size-300);
+        transform: rotate(-45deg);
+        top: var(--size-100);
+        background-color: var(--clr-neutral-100);
+    }
+
+    .about-us__statistics-indicator::after {
+        position: absolute;
+        font-family: var(--ff-primary);
+        font-weight: var(--fw-light);
+        content: '02';
+        top: var(--size-100);
+        left: var(--size-100);
+    }
+
+    .about-us__statistics-percentaje {
+        grid-area: percentaje;
+        width: 100%;
+        height: 100%;
+        border-left: 2px solid var(--clr-neutral-100);
+        padding-left: var(--size-150);
+    }
+    
+    .about-us__statistics-description {
+        grid-area: description;
+        width: 100%;
+        height: 100%;
+        border-left: 2px solid var(--clr-neutral-100);
+        padding-left: var(--size-150);
     }
 }
