Adjust font-size across resolutions

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    font-size: var(--fs-250);
+    font-size: clamp(var(--fs-50), 1.1vw, var(--fs-250));
     text-transform: uppercase;
     color: var(--clr-neutral-100);
     background-color: transparent;
@@ -45,6 +45,7 @@
 
 @media (max-width: 63em) {
     .navbar {
+        font-size: var(--fs-250);
         color: var(--clr-primary-400);
         background-color: var(--clr-neutral-100);
         padding-block: 0;
