--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,15 @@
 
     --clr-accent-100: hsl(0, 0%, 80%);
     --clr-accent-400: hsl(212, 30%, 50%);
+    --clr-accent-800: hsl(212, 70%, 10%);
 
     --clr-neutral-100: hsl(0, 0%, 100%);
     --clr-neutral-900: hsl(0, 0%, 0%);
 
+    --clr-bg-opacity-100: hsl(212, 70%, 10%, 0.05);
+    --clr-bg-opacity-700: hsl(212, 70%, 10%, 0.7);
     --clr-bg-opacity-800: hsl(212, 70%, 10%, 0.85);
+    --clr-bg-opacity-900: hsl(212, 70%, 10%, 0.95);
 
     --ff-primary: 'Sura', serif;
     --ff-secondary: 'Enriqueta', serif;
@@ -58,6 +62,7 @@
     --size-250: 2.75rem;
     --size-300: 3rem;
     --size-325: 3.5rem;
+    --size-350: 5rem;
     --size-400: 6.25rem;
     --size-500: 7.8rem;
     --size-600: 8.75rem;
@@ -252,6 +257,9 @@ button {
 }
 .fs-section-title {
     font-size: var(--fs-section-title);
+    line-height: 1.1;
+    padding-top: var(--size-25);
+    padding-bottom: var(--size-150);
 }
 .fs-picture-info {
     font-size: var(--fs-50);
@@ -327,4 +335,3 @@ button {
     white-space: nowrap;
     border: 0;
 }
-
