--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -27,6 +27,13 @@
     height: 100%;
 }
 
+.card[data-section='services'] .card__media::after {
+    content: '';
+    position: absolute;
+    background-color: hsl(0, 0%, 0%, 0.3);
+    inset: 0;
+}
+
 .card[data-section='services'] .card__media img {
     object-fit: cover;
     z-index: -1;
@@ -110,6 +117,13 @@
         transform: scale(1.025);
     }
 
+    .card[data-section='services'] .card__media::after {
+        opacity: 1;
+        transition: opacity 500ms ease;
+    }
+    .card[data-section='services']:hover .card__media::after {
+        opacity: 0.35;
+    }
     .card[data-section='services'] .card__body {
         transform: translateY(54%);
         transition: transform 500ms ease;
