--- a/src/components/HomeBanner/HomeBanner.css
+++ b/src/components/HomeBanner/HomeBanner.css
@@ -91,8 +91,14 @@
     }
 }
 
-@media (min-width: 63em) {
+@media (min-width: 69em) {
     .banner__brand {
         width: var(--size-900);
+    }
+}
+
+@media (orientation: landscape) {
+    .banner {
+        padding-block: var(--size-400);
     }
 }
