--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
+    position: fixed;
     font-size: clamp(var(--fs-50), 1.1vw, var(--fs-250));
     text-transform: uppercase;
     color: var(--clr-neutral-100);
     background-color: transparent;
     padding-block: var(--size-250);
-    position: fixed;
     inset: 0 0 auto 0;
     z-index: 100;
 }
@@ -77,9 +77,18 @@
     }
 
     ul.navbar__links {
-        display: none;
-        background-color: inherit;
+        position: absolute;
+        width: 100%;
         height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+        background-color: inherit;
+        top: 100%;
+        left: 0;
+        clip-path: inset(0 0 100% 0);
+        transition: clip-path 700ms ease-in-out;
     }
 
     ul.navbar__links li {
@@ -87,8 +96,8 @@
         line-height: 1;
         display: grid;
         place-items: center;
-        padding-block: max(2.765vh, var(--size-75));
         border-bottom: 1px solid var(--clr-accent-100);
+        padding-block: max(2.765vh, var(--size-75));
     }
 
     ul.navbar__links li:first-child {
@@ -100,10 +109,6 @@
     }
 
     .navbar__links[data-expanded] {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 0;
+        clip-path: inset(0 0 0 0);
     }
 }
