--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -89,6 +89,7 @@
         left: 0;
         clip-path: inset(0 0 100% 0);
         transition: clip-path 700ms ease-in-out;
+        will-change: clip-path;
     }
 
     ul.navbar__links li {
