--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,12 @@
     padding-block: var(--size-250);
     inset: 0 0 auto 0;
     z-index: 100;
+    transition: background-color 150ms ease;
+}
+
+.navbar[data-theme='inverse'] {
+    background-color: var(--clr-neutral-100);
+    color: var(--clr-primary-400);
 }
 
 .navbar__container {
@@ -31,12 +37,28 @@
 }
 
 .navbar__links li {
+    padding-block: var(--size-15);
     cursor: pointer;
 }
 
-.navbar__links li:hover, .navbar__links a:focus-visible {
+.navbar__links li.active {
+    position: relative;
+    font-weight: var(--fw-bold);
+}
+
+.navbar__links li.active::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 3px;
+    background-color: var(--clr-accent-400);
+    bottom: 0;
+    left: 0;
+}
+
+.navbar__links li:not(.active):hover, .navbar__links a:focus-visible {
     outline: 0;
-    color: var(--clr-accent-100);
+    color: var(--clr-accent-200);
 }
 
 .navbar__links a {
@@ -76,6 +98,10 @@
         width: 2rem;
     }
 
+    .navbar nav {
+        background-color: inherit;
+    }
+
     ul.navbar__links {
         position: absolute;
         width: 100%;
@@ -99,6 +125,10 @@
         place-items: center;
         border-bottom: 1px solid var(--clr-accent-100);
         padding-block: max(2.765vh, var(--size-75));
+    }
+
+    .navbar__links li.active::after {
+        display: none;
     }
 
     ul.navbar__links li:first-child {
