--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,8 +7,8 @@
     padding-block: var(--size-250);
     inset: 0 0 auto 0;
     z-index: 100;
-    transition-property: background-color, transform;
-    transition-duration: 200ms, 600ms;
+    transition-property: background-color, transform, -webkit-transform;
+    transition-duration: 200ms, 600ms, 600ms;
     transition-timing-function: ease;
 }
 
