--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,8 +8,8 @@
     inset: 0 0 auto 0;
     z-index: 100;
     transition-property: background-color, transform, -webkit-transform;
-    transition-duration: 200ms, 600ms, 600ms;
-    transition-timing-function: ease;
+    transition-duration: 500ms;
+    transition-timing-function: ease-in-out;
 }
 
 .navbar[data-theme='inverse'] {
