Create custom select dropdown component
Custom dropdown add to contact us section.

--- a/src/components/ContacUs/ContactUs.css
+++ b/src/components/ContacUs/ContactUs.css
@@ -46,6 +46,15 @@
     padding-bottom: var(--size-75);
 }
 
+.contact-us__form-label[for='contact-us__service'] {
+    padding-bottom: var(--size-25);
+}
+
+.contact-us__select-container {
+    position: relative;
+    padding-block: var(--size-75);
+}
+
 .contact-us__input-container {
     position: relative;
     border-bottom: 1px solid var(--clr-primary-400);
