--- a/src/components/CustomSelect/CustomSelect.css
+++ b/src/components/CustomSelect/CustomSelect.css
@@ -91,8 +91,10 @@
     cursor: pointer;
 }
 
-.custom-dropdown-option:hover {
-    color: var(--clr-bg-hover);
+@media (hover:hover) {
+    .custom-dropdown-option:hover {
+        color: var(--clr-bg-hover);
+    }
 }
 
 .custom-dropdown-option.selected {
